syntax = "proto3";

package models;

message Customer{
    int32 CustomerID = 1;
    string Name = 2;
    string InternalCustomerID = 3;
    string StartDate = 4;
    string EndDate = 5; 
    string RowVersion = 6;
}

message CustomerCredentials{
    string ClientAPIKey = 1;
    string Secret = 2;
    int32 CustomerID = 3;
    string StartDate = 4;
    string EndDate = 5;     
}

message CustomerIP{
    string CustomerIP = 1;
    int32 CustomerID = 2;
    string StartDate = 3;
    string EndDate = 4;   
}

message CustomerProduct{
    int32 CustomerProductID = 1;
    string CustomerProduct = 2;
}

message CustomerServiceOfferings{
    int32 CustomerID = 1;
    int32 CustomerServiceOfferingID = 2;
    int32 CustomerClientProductID = 3;
    string StartDate = 4;
    string EndDate = 5;
    string BillingCycle = 6;    
}